Fixed echoed preview getting cut off

--- a/src/main/webapp/scss/main/remote.scss
+++ b/src/main/webapp/scss/main/remote.scss
@@ -25,6 +25,7 @@ $optionSize: 36px;
                 position:fixed;
                 #{$vert}: 5px;
                 #{$side}: $offset + 5;
+                z-index: 10000000;
             }
         }
         &.ech-hor{
@@ -39,6 +40,7 @@ $optionSize: 36px;
                 position:fixed;
                 #{$side}: 5px;
                 #{$vert}: $offset + 5;
+                z-index: 10000000;
             }
         }
     }
